--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "dotenv-safe": "^9.1.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "next": "14.1.4",
-    "react": "^18",
+    "next": "^14.1.4",
+    "react": "^18.2.0",
     "react-dom": "^18",
     "react-router-dom": "^6.22.3"
   },
