--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "dotenv-safe": "^9.1.0",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
+    "@types/dotenv-safe": "^8.1.6",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
