--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.1.4",
+    "nodemailer": "^6.9.13",
     "react": "^18.2.0",
     "react-dom": "^18",
     "react-router-dom": "^6.22.3"
@@ -29,7 +30,8 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.12.2",
-    "@types/react": "^18",
+    "@types/nodemailer": "^6.4.14",
+    "@types/react": "^18.2.75",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "concurrently": "^8.2.2",
